# termproject

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  build.ps1  load.h  main.cpp  model.cpp  model.h  node.cpp  node2.cpp  run.bat  shader.h
assets/chell/: license.txt  scene.gltf
game/: MainScene.cpp  MainScene.h
src/: main.cpp  model.cpp  model.h  node.cpp  node.h  node2.cpp  portal.cpp  portal.h  shader.h
src/game/: MainScene.cpp  MainScene.h  Player.cpp  Player.h
